--- a/src/main/resources/assets/matteroverdrive/lang/en_us.lang
+++ b/src/main/resources/assets/matteroverdrive/lang/en_us.lang
@@ -1,5 +1,5 @@
 ##########################################################################################################
-# Items
+# Items #
 item.selector.name=Selector
 item.debugger.name=Teleporter Debugger
 
@@ -99,7 +99,7 @@ item.matteroverdrive.artifact.name=Unknown Artifact
 item.matteroverdrive.quantum_fold_manipulator.name=Quantum Fold Manipulator
 item.matteroverdrive.matter.name=Matter
 
-#///////////// Upgrades ////////////
+## Upgrades ##
 item.matteroverdrive.upgrade.speed.name=Speed Upgrade
 item.matteroverdrive.upgrade.power.name=Power Upgrade
 item.matteroverdrive.upgrade.failsafe.name=Fail-Safe Upgrade
@@ -109,7 +109,7 @@ item.matteroverdrive.upgrade.hyper_speed.name=Hyper Speed Upgrade
 item.matteroverdrive.upgrade.matter_storage.name=Matter Storage Upgrade
 item.matteroverdrive.upgrade.muffler.name=Muffler Upgrade
 
-#///////////// Weapon Modules ///////
+## Weapon Modules ##
 item.matteroverdrive.weapon_module_color.name=Color Module
 item.matteroverdrive.weapon_module_barrel.damage.name=Dilithium Focusing Matrix
 item.matteroverdrive.weapon_module_barrel.fire.name=Incendiary Filter
@@ -131,9 +131,9 @@ item.matteroverdrive.sniper_scope.name=Sniper Scope
 item.info.configured=Configured
 
 ##########################################################################################################
-# Tile Entities
+# Tile Entities #
 
-#///////////// Replicator ////////////
+## Replicator ##
 tile.replicator.name=Matter Replicator
 tile.replicator.config.volume.replicate=Replication Volume
 tile.replicator.config.particles.vent=Vent Particles
@@ -145,7 +145,7 @@ tile.replicator.config.fail=Fail Chance
 tile.replicator.details=Replicates Items and Blocks from Matter Plasma
 tile.replicator_active.name=Matter Replicator
 
-#///////////// Decomposer ////////////
+## Decomposer ##
 tile.decomposer.name=Matter Decomposer
 tile.decomposer.details=Decomposes Items into Matter Plasma
 tile.decomposer.config.storage.matter=Matter Storage
@@ -181,7 +181,7 @@ tile.spacetime_accelerator.name=Space-Time Accelerator
 tile.spacetime_accelerator.details=Speeds up blocks and machines
 tile.pylon.name=Dimensional Pylon
 
-#///////////// Pattern Storage ////////////
+## Pattern Storage ##
 tile.pattern_storage.name=Pattern Storage
 tile.pattern_storage.details=Stores item patterns, for replication
 tile.pattern_storage.config.particles.vent=Vent Particles
@@ -206,14 +206,14 @@ tile.microwave.name=Microwave
 tile.matter_recycler.details=Used to recycle items, ready for decomposing
 tile.android_spawner.name=Rogue Android Spawner
 
-#///////////// Fluids ////////////
+## Fluids ##
 tile.matter_plasma.name=Matter Plasma
 fluid.matter_plasma=Matter Plasma
 tile.molten_tritanium.name=Molten Tritanium
 fluid.molten_tritanium=Molten Tritanium
 
 
-#///////////// Fusion Reactor ////////////
+## Fusion Reactor ##
 tile.fusion_reactor_controller.name=Fusion Reactor Controller
 tile.fusion_reactor_controller.config.storage.energy=Energy Storage
 tile.fusion_reactor_controller.config.storage.matter=Matter Storage
@@ -232,14 +232,14 @@ fusion_reactor.info.need_coils=NEED${newline}MORE${newline}COILS
 fusion_reactor.info.no_anomaly=NO${newline}GRAVITATIONAL${newline}ANOMALY
 fusion_reactor.info.anomaly_too_far=GRAVITATIONAL${newline}ANOMALY${newline}TOO${newline}FAR
 
-#///////////// Anomaly Info ////////////
+## Anomaly Info ##
 anomaly.info.mass=Mass
 anomaly.info.range=Range
 anomaly.info.brake_range=Brake Range
 anomaly.info.horizon=Horizon
 anomaly.info.brake_lvl=Brake Lvl
 
-#///////////// Android Station ////////////
+## Android Station ##
 tile.android_station.name=Android Station
 tile.android_station.details=Android Upgrade Management
 tile.charging_station.name=Charging Station
@@ -248,7 +248,7 @@ container.replicator.name=Replicator
 machine.tooltip.matter=Matter
 machine.tooltip.energy=Charged
 
-#///////////// Tritanium Crate ////////////
+## Tritanium Crate ##
 tile.tritanium_crate.name=Tritanium Crate
 
 tile.tritanium_crate_white.name=White Tritanium Crate
@@ -272,7 +272,7 @@ tile.new_tritanium_crate.name=New Tritanium Crate
 tile.new_tritanium_crate_white.name=New White Tritanium Crate
 tile.new_tritanium_crate_purple.name=New Purple Tritanium Crate
 
-#///////////// Entities /////////////////<-->
+## Entities ##
 
 entity.rogue_android.name=Melee Rogue Android
 entity.failed_pig.name=Failed Pig
@@ -287,7 +287,7 @@ entity.ranged_rogue_android.name=Ranged Rogue Android
 entity.mutant_scientist.name=Mutant Scientist
 entity.drone.name=Drone
 
-#///////////// Decorative ////////////////////
+## Decorative ##
 tile.decorative.stripes.name=Yellow Stripes
 tile.decorative.coils.name=Coils
 tile.decorative.clean.name=Tritanium Smooth Plate
@@ -309,7 +309,7 @@ tile.decorative.tritanium_lamp.name=Tritanium Lamp
 tile.decorative.tritanium_plate_colored.name=Colored Tritanium Plate
 
 ##########################################################################################################
-# Dialogs
+# Dialogs #
 
 dialog.generic.quit.0.question=See you later.
 dialog.generic.quit.1.question=I must go.
@@ -325,7 +325,7 @@ dialog.generic.trade.1.question=Let's trade.
 dialog.generic.trade.2.question=Let me see your goods.
 dialog.generic.trade.3.question=What do you have for sale?
 
-#///////////// Mad Scientist ///////////////
+## Mad Scientist ##
 dialog.mad_scientist.convert.question=I have all the parts!
 dialog.mad_scientist.requirements.line=Finally!<br>Getting rid of that fragile body is the best choice.<br>The only problem is that I need you to bring me a set of Android parts before we begin.
 dialog.mad_scientist.requirements.question=I want to become an android.
@@ -364,7 +364,7 @@ dialog.mad_scientist.trade_route_quest.1.question=I noticed the price, what are 
 dialog.mad_scientist.trade_route_quest.1.line=What do you mean? It's nothing really, just some self-sealing stem bolts.
 
 ##########################################################################################################
-# Creative Panels
+# Creative Panels #
 
 itemGroup.tabMO=Matter Overdrive
 itemGroup.tabMO_modules=Matter Overdrive Modules
@@ -372,7 +372,7 @@ itemGroup.tabMO_androidParts=Matter Overdrive Android Parts
 itemGroup.tabMO_contracts=Matter Overdrive Contracts
 
 ##########################################################################################################
-# Upgrade Types
+# Upgrade Types #
 upgradetype.Speed.name=Time
 upgradetype.PowerUsage.name=Power Usage
 upgradetype.Output.name=Output
@@ -386,7 +386,7 @@ upgradetype.Muffler.name=Muffling
 upgradetype.Muffler.description=Muffles all sound in the machine.
 
 ##########################################################################################################
-# Weapon Stats
+# Weapon Stats #
 weaponstat.damage.name=Damage
 weaponstat.ammo.name=Ammo
 weaponstat.effect.name=Effect
@@ -402,9 +402,9 @@ weaponstat.max_heat.name=Max Heat
 weaponstat.accuracy.name=Accuracy
 
 ##########################################################################################################
-# GUI
+# GUI #
 
-#///////////// tooltips ///////////////
+## tooltips ##
 gui.tooltip.close_menu=Close Menu
 gui.tooltip.open_menu=Open Menu
 gui.tooltip.close=Close
@@ -446,7 +446,7 @@ gui.tooltip.quest.complete=Complete Quest
 gui.tooltip.locks=Locks
 gui.tooltip.parent=Parent
 
-#//////////// Labels //////////////
+## Labels ##
 gui.label.button.save=Save
 gui.label.button.remove=Remove
 gui.label.button.add=Add
@@ -458,7 +458,7 @@ gui.label.button.import.too_far=Destination Too Far
 gui.label.auto_line_size=Auto Line Size
 gui.label.accept=Accept
 
-#//////////// Machines /////////////
+## Machines ##
 gui.replicator.name=Pattern Replicator
 gui.decomposer.name=Matter Decomposer
 gui.matter_analyzer.name=Matter Analyzer
@@ -476,7 +476,7 @@ gui.inscriber.name=Molecular Inscriber
 gui.contract_market.name=Contracts
 gui.dimensional_pylon.name=Dimension Reactor
 
-#//////////// Other ///////////////
+## Other ##
 gui.redstone_mode.high=High
 gui.redstone_mode.low=Low
 gui.redstone_mode.disabled=Disabled
@@ -500,7 +500,7 @@ gui.hologram.access_denied=ACCESS DENIED
 gui.time_until_next_quest=Next Quest in: %1$s
 
 ##########################################################################################################
-# Modules
+# Modules #
 
 module.battery.name=Battery Module
 module.color.name=Color Module
@@ -526,7 +526,7 @@ moduleslot.3.name=Applicable to Sights slot
 moduleslot.4.name=Applicable to Misc slot
 
 ##########################################################################################################
-# Bioparts
+# Bioparts #
 
 biopart.head.name=Head
 biopart.arms.name=Arms
@@ -536,7 +536,7 @@ biopart.other.name=Other
 biopart.battery.name=Battery
 
 ##########################################################################################################
-# Biostats
+# Biostats #
 
 biotic_stat.teleport.name=Ender Teleporter
 biotic_stat.teleport.details=Short range teleportation with '%1$s' key /n/Drains %2$s on teleport /n/A battery capable of extracting %2$s is required
@@ -584,7 +584,7 @@ biotic_stat.oxygen.name=Respirocytes
 biotic_stat.oxygen.details=Removes the need for oxygen.
 
 ##########################################################################################################
-# Deaths
+# Deaths #
 
 death.attack.phaser=%1$s was disintegrated by %2$s
 death.attack.phaser.item=%1$s was disintegrated by %2$s using %3$s
@@ -594,7 +594,7 @@ death.attack.plasmaBolt=%1$s was shot by %2$s
 death.attack.plasmaBolt.item=%1$s was shot by %2$s using %3$s
 
 ##########################################################################################################
-# Tasks
+# Tasks #
 
 task.state.INVALID.name=Invalid
 task.state.INVALID.description=Task is not a Valid.
@@ -620,7 +620,7 @@ info.matteroverdrive.updater.download=download
 info.matteroverdrive.updater.hover=Click to download the latest version.
 
 ##########################################################################################################
-# Config
+# Config #
 config.machine_options.name=Machines
 config.world_gen.name=World Generation
 config.matter_network.name=Matter Network
@@ -648,7 +648,7 @@ config.android_hud.opacity_background=HUD Elements Background Opacity
 config.compatibility.name=Compatibility
 
 ##########################################################################################################
-# Chat Alerts
+# Chat Alerts #
 
 alert.no_rights=No Rights to Access the $0
 alert.no_access_default=Access denied to $0
@@ -658,12 +658,12 @@ alert.no_rights.dismantle=Only the owner can dismantle the $0
 alert.new_update=A new version is available!
 
 #############################################################################################################
-# Enchantments
+# Enchantments #
 
 enchantment.matteroverdrive.weapon.damage=Overclock
 
 ##########################################################################################################
-# Guides
+# Guides #
 guide.category.general.name=Basic
 guide.category.weapons.name=Weapons
 guide.category.android.name=Android
@@ -697,7 +697,7 @@ guide.entry.tritanium_armor.name=Tritanium Armor
 guide.entry.tritanium_tools.name=Tritanium Tools
 
 ###############################################################################################################
-# attributes
+# attributes #
 
 modifier.bionic.max_health=Max Health
 attribute.name.android.glitchTime=Glitch Time
@@ -705,8 +705,8 @@ attribute.name.android.batteryUse=Battery Use
 
 
 ###############################################################################################################
-# others
-#//////////// colors ////////////
+# others #
+## colors ##
 color.black=Black
 color.red=Red
 color.green=Green
@@ -734,7 +734,7 @@ mo.jei.inscriber=Inscriber
 
 
 ###############################################################################################################
-# quests
+# quests #
 quest.kill_androids.title=They will kill us all!
 quest.kill_androids.info=The are taking over the world! I don't know how exactly they got here, but there numbers are growing by the day. It's seems like there's no end to them. We must fight for if we don't, we will all perish. The fight starts with you $player! We need you to help us kill as many of them as possible, before they get us all.
 quest.kill_androids.objective.0=Kill $killCount/$maxKillCount Rogue Androids.
